# cmake_minimum_required (VERSION 3.8)

# set(SRCS vulkan_target.cpp)

# add_library(nncase_targets_vulkan SHARED ${SRCS})
# target_link_libraries(nncase_targets_vulkan PRIVATE nncase nncase_modules_vulkan)
# set_target_properties(nncase_targets_vulkan PROPERTIES
#                                          OUTPUT_NAME "nncase.targets.vulkan")
# install(TARGETS nncase_targets_vulkan
#         COMPONENT nncase-runtime)
